--- a/po/ru.po
+++ b/po/ru.po
@@ -7,18 +7,18 @@ msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-09-03 12:04+0300\n"
-"PO-Revision-Date: 2013-09-03 07:54+0000\n"
+"PO-Revision-Date: 2013-09-03 09:25+0000\n"
 "Last-Translator: Andriy <andrej@rep.kiev.ua>\n"
 "Language-Team: gnome-cyr\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.5.0\n"
 "X-Poedit-SourceCharset: utf-8\n"
-"X-POOTLE-MTIME: 1378194889.0\n"
+"X-POOTLE-MTIME: 1378200305.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:6
 msgid "Preferred Applications"
@@ -136,15 +136,13 @@ msgstr "Выбор значка..."
 
 #. genitive case is here: Choose icon from: ...
 #: ../data/ui/choose-icon.ui.h:4
-#, fuzzy
 msgid "image files"
-msgstr "Файлов с изображениями"
+msgstr "файлов с изображениями"
 
 #. genitive case is here: Choose icon from: ...
 #: ../data/ui/choose-icon.ui.h:6
-#, fuzzy
 msgid "system icon theme"
-msgstr "Системной темы значков"
+msgstr "системной темы значков"
 
 #: ../data/ui/exec-file.glade.h:1
 msgid "Execute File"
@@ -424,7 +422,7 @@ msgstr "Ранее, чем:"
 
 #: ../data/ui/filesearch.glade.h:28
 msgid "_Image files"
-msgstr "Изображения"
+msgstr "_Изображения"
 
 #: ../data/ui/filesearch.glade.h:29
 msgid "_Properties"
@@ -783,7 +781,7 @@ msgstr "Корзина"
 
 #: ../src/gtk/fm-file-properties.c:364
 msgid "Image files"
-msgstr "Файлов с изображениями"
+msgstr "Файлы с изображениями"
 
 #: ../src/gtk/fm-file-properties.c:490 ../src/gtk/fm-file-properties.c:499
 msgid "byte"
